--- a/HTML/style.css
+++ b/HTML/style.css
@@ -155,6 +155,7 @@ span {
     height: 400px;
     border: 2px solid black;
     width: 23%;
+    border-radius: 5px;
     background-color: white;
     padding: 20px 0px 15px;
     margin-top: 15px;
@@ -178,6 +179,7 @@ span {
     height: 50px;
     color: white;
     display: flex;
+    margin-top: 20px;
     justify-content: center;
     align-items: center;
     font-weight: 600;
