LearnVariablesInCSS by building skyline

--- a/CodeCampProject/DocumentationPage/style.css
+++ b/CodeCampProject/DocumentationPage/style.css
@@ -83,6 +83,9 @@ article {
 .refer {
   margin-bottom: 30px;
 }
+span {
+  line-height: 1.8rem;
+}
 @media (max-width: 1199px) and (min-width: 769px) {
   #navbar {
     width: 300px;
